# almanak

./: .gitignore  CMakeLists.txt  README.md
include/: dcgan_discriminator.hpp  dcgan_generator.hpp  simplest_fc_layer.hpp
src/: dcgan_discriminator.cpp  dcgan_generator.cpp  main.cpp  simplest_fc_layer.cpp
